Fix broken style of faculty connect request pages

--- a/app/assets/stylesheets/custom_theme.scss
+++ b/app/assets/stylesheets/custom_theme.scss
@@ -88,10 +88,6 @@ p {
   color: $light-grey-text;
 }
 
-// .brand-danger {
-//   color: $brand-danger;
-// }
-
 // ******** BUTTON Style ********
 .btn {
   border-radius: $border-radius-btn;
@@ -228,6 +224,7 @@ p {
 .container-md-center {
   @extend .mx-auto;
   max-width: 45rem;
+  height: 100vh;
 }
 
 .content-box {
@@ -265,6 +262,11 @@ p {
   @include media-breakpoint-down(sm) {
     padding: 0;
   }
+}
+
+.message-emoticon {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .form-section-title {
